# DFT

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml
includes/DFT/: DFT.hpp  FFT.hpp  NaiveDFT.hpp
sources/: CMakeLists.txt  FFT.cpp  NaiveDFT.cpp
tests/: BenchmarkFFT.cpp  BenchmarkNaiveDFT.cpp  CMakeLists.txt  TestFFT.cpp  TestNaiveDFT.cpp  Utils.cpp  Utils.hpp
tests/benchmark/: BenchmarkFFT.cpp  BenchmarkNaiveDFT.cpp  CMakeLists.txt
tests/unit/: CMakeLists.txt  TestNaiveDFT.cpp
tests/utils/: CMakeLists.txt  Utils.hpp
